--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragoneye-node",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "The official TypeScript library for the Dragoneye API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/dragoneyeAI/dragoneye-node#readme",
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
